# riff

./: .gitignore  .pyre_configuration  LICENSE  README.md  conftest.py  contract.yml  pyproject.toml
.pyre/: pyre.stderr
examples/: first_example.py
riff/: __init__.py  __main__.py  contract.py  endpoint.py  parser.py
tests/: test_riff.py
